// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceInfo Renders Loading story 1`] = `
<body>
  <div>
    <div
      class="pf-m-flex-1 mas--CreateKafkaInstance__sidebar"
      style=""
    >
      <div
        class="pf-c-content"
        data-testid="instance-info"
      >
        <h3
          class=""
          data-ouia-component-id="OUIA-Generated-Text-1"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Details
        </h3>
        <div
          class="pf-l-grid pf-m-all-6-col-on-sm pf-m-all-12-col-on-lg pf-m-gutter"
        >
          <div
            class="pf-l-grid__item"
          >
            <div
              class="pf-c-skeleton"
              style="--pf-c-skeleton--Width: 75%;"
            >
              <span
                class="pf-u-screen-reader"
              >
                Loading contents
              </span>
            </div>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <div
              class="pf-c-skeleton"
              style="--pf-c-skeleton--Width: 66%;"
            >
              <span
                class="pf-u-screen-reader"
              />
            </div>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <div
              class="pf-c-skeleton"
              style="--pf-c-skeleton--Width: 50%;"
            >
              <span
                class="pf-u-screen-reader"
              />
            </div>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <div
              class="pf-c-skeleton"
              style="--pf-c-skeleton--Width: 33%;"
            >
              <span
                class="pf-u-screen-reader"
              />
            </div>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <div
              class="pf-c-skeleton"
              style="--pf-c-skeleton--Width: 25%;"
            >
              <span
                class="pf-u-screen-reader"
              />
            </div>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <div
              class="pf-c-skeleton"
              style="--pf-c-skeleton--Width: 55%;"
            >
              <span
                class="pf-u-screen-reader"
              />
            </div>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <div
              class="pf-c-skeleton"
              style="--pf-c-skeleton--Width: 35%;"
            >
              <span
                class="pf-u-screen-reader"
              />
            </div>
          </div>
        </div>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-link pf-m-inline pf-m-small"
          data-ouia-component-id="OUIA-Generated-Button-link-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          style="margin-top: 20px;"
          type="button"
        >
          Need help getting started? Follow our quick start guide.
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`InstanceInfo Renders QuotaInstance story 1`] = `
<body>
  <div>
    <div
      class="pf-m-flex-1 mas--CreateKafkaInstance__sidebar"
      style=""
    >
      <div
        class="pf-c-content"
        data-testid="instance-info"
      >
        <h3
          class=""
          data-ouia-component-id="OUIA-Generated-Text-2"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Details
        </h3>
        <div
          class="pf-l-grid pf-m-all-6-col-on-sm pf-m-all-12-col-on-lg pf-m-gutter"
        >
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Ingress/Egress
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123 MiB/second each
              </dd>
            </dl>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Storage
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123 GiB
              </dd>
            </dl>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Partitions
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123
              </dd>
            </dl>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Client connections
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123
              </dd>
            </dl>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Connection rate
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123 connections/second
              </dd>
            </dl>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Message size
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123 MiB
              </dd>
            </dl>
          </div>
        </div>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-link pf-m-inline pf-m-small"
          data-ouia-component-id="OUIA-Generated-Button-link-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          style="margin-top: 20px;"
          type="button"
        >
          Need help getting started? Follow our quick start guide.
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`InstanceInfo Renders TrialInstance story 1`] = `
<body>
  <div>
    <div
      class="pf-m-flex-1 mas--CreateKafkaInstance__sidebar"
      style=""
    >
      <div
        class="pf-c-content"
        data-testid="instance-info"
      >
        <h3
          class=""
          data-ouia-component-id="OUIA-Generated-Text-3"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Details
        </h3>
        <div
          class="pf-l-grid pf-m-all-6-col-on-sm pf-m-all-12-col-on-lg pf-m-gutter"
        >
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Duration
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                123 hours
              </dd>
            </dl>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Ingress/Egress
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123 MiB/second each
              </dd>
            </dl>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Storage
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123 GiB
              </dd>
            </dl>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Partitions
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123
              </dd>
            </dl>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Client connections
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123
              </dd>
            </dl>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Connection rate
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123 connections/second
              </dd>
            </dl>
          </div>
          <div
            class="pf-l-grid__item"
          >
            <dl
              class=""
              data-pf-content="true"
            >
              <dt
                class=""
                data-pf-content="true"
              >
                Message size
              </dt>
              <dd
                class=""
                data-pf-content="true"
              >
                up to 123 MiB
              </dd>
            </dl>
          </div>
        </div>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-link pf-m-inline pf-m-small"
          data-ouia-component-id="OUIA-Generated-Button-link-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          style="margin-top: 20px;"
          type="button"
        >
          Need help getting started? Follow our quick start guide.
        </button>
      </div>
    </div>
  </div>
</body>
`;
